# video-hw

./: .gitignore  Cargo.toml  MIGRATION_AND_REBUILD_GUIDE.md  README.md  ROADMAP.md  STATUS.md  TEST_PLAN_MULTIBACKEND.md  encoded-output.h264  encoded-output.h265
benches/: decode_bench.rs
crates/backend-contract/src/: lib.rs
crates/bitstream-core/: Cargo.toml
crates/nvidia-backend/src/: lib.rs
crates/video-hw/: Cargo.toml
crates/video-hw/examples/: decode_vt.rs  encode_vt.rs
crates/video-hw/src/: lib.rs
crates/video-hw/tests/: e2e_video_hw.rs
crates/vt-backend/: Cargo.toml
crates/vt-backend/src/: lib.rs
crates/vt-backend/tests/: e2e_vt.rs
docs/: README.md  USAGE_STRICT.md
docs/history/: HANDOFF_CONTEXT_2026-02-18.md
docs/plan/: API_REDESIGN_BLUEPRINT_2026-02-21.md  MASTER_INTEGRATION_STEPS_2026-02-19.md  MIGRATION_AND_REBUILD_GUIDE.md  NV_BOTTLENECK_REMEDIATION_2026-02-19.md  NV_LOCK_MS_REDUCTION_EXECUTION_PLAN_2026-02-19.md  NV_RAW_INPUT_ZERO_COPY_CONTRACT_2026-02-19.md  NV_SESSION_ARCHITECTURE_REDESIGN_2026-02-19.md  PIPELINE_TASK_DISTRIBUTION_DESIGN_2026-02-19.md  ROADMAP.md  TEST_PLAN_MULTIBACKEND.md  VT_PARITY_EXECUTION_PLAN_2026-02-19.md
docs/research/: RESEARCH.md  RUST_ANALYZER_BACKEND_WORKSPACES.md  highlevel_layer.md
docs/spec/: FEATURE_GATING_AND_DEAD_CODE_POLICY.md  IO_FORMAT_CONTRACT.md  TEST_SPEC_INVENTORY.md
docs/status/: BENCHMARK_2026-02-18.md  FFMPEG_NV_COMPARISON_2026-02-19.md  FFMPEG_VT_COMPARISON_2026-02-19.md  NV_PRECISE_ANALYSIS_2026-02-19.md  STATUS.md
examples/: decode_annexb.rs  decode_nvidia.rs  encode_nvidia.rs  encode_raw_argb.rs  encode_streaming_probe.rs  encode_synthetic.rs  transform_nv12_rgb.rs
legacy-root-backup/examples_old/: decode_annexb.rs
legacy-root-backup/rebuild-scaffold-origin/: Cargo.toml
legacy-root-backup/rebuild-scaffold-origin/crates/backend-contract/: Cargo.toml
legacy-root-backup/rebuild-scaffold-origin/crates/nvidia-backend/: Cargo.toml
legacy-root-backup/rebuild-scaffold-origin/examples/smoke/: Cargo.toml
legacy-root-backup/src/: packer.rs
legacy-root-backup/tests/: bitstream_contract.rs
rebuild-scaffold/: README.md
rebuild-scaffold/crates/backend-contract/src/: lib.rs
rebuild-scaffold/crates/bitstream-core/src/: lib.rs
rebuild-scaffold/crates/nvidia-backend/src/: lib.rs
rebuild-scaffold/crates/vt-backend/: Cargo.toml
rebuild-scaffold/crates/vt-backend/src/: lib.rs
rebuild-scaffold/crates/vt-backend/tests/: e2e_vt.rs
sample-videos/: sample-10s.h265
scripts/: README.md  benchmark_ffmpeg_nv.rs  benchmark_ffmpeg_nv_precise.rs  benchmark_ffmpeg_vt_precise.rs  run_vt_precise_suite.rs
src/: annexb.rs  backend.rs  backend_transform_adapter.rs  bitstream.rs  contract.rs  cuda_transform.rs  error.rs  lib.rs  nv_backend.rs  nv_meta_decoder.rs  nvidia_backend.rs  pipeline.rs  pipeline_scheduler.rs  transform.rs  vt_backend.rs  vt_metal_transform.rs
tests/: e2e_video_hw.rs
