[workspace]
resolver = "2"
members = [
  "crates/backend-contract",
  "crates/bitstream-core",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
thiserror = "2.0.18"
anyhow = "1.0.101"

[package]
name = "video-hw"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
backend-contract = { path = "crates/backend-contract" }
bitstream-core = { path = "crates/bitstream-core" }
core-foundation = { version = "0.10.1", optional = true }
core-media = { version = "0.7.1", optional = true }
core-video = { version = "0.5.2", optional = true }
video-toolbox = { version = "0.2.1", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = { version = "0.10.1" }
core-media = { version = "0.7.1" }
core-video = { version = "0.5.2" }
video-toolbox = { version = "0.2.1" }

[features]
default = []
vt = ["video-toolbox", "core-media", "core-foundation", "core-video"]
nvidia = []
