[package]
name = "video-hw"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[features]
default = ["backend-vt"]
backend-vt = [
	"dep:core-foundation",
	"dep:core-media",
	"dep:core-video",
	"dep:metal",
	"dep:video-toolbox",
]
backend-nvidia = ["dep:nvidia-video-codec-sdk", "dep:cudarc"]

[dependencies]
thiserror = "2.0.18"
anyhow = "1.0.101"
clap = { version = "4.5.59", features = ["derive"] }
cudarc = { version = "0.19.2", default-features = false, features = ["driver", "nvrtc", "cuda-version-from-build-system"], optional = true }
nvidia-video-codec-sdk = { git = "https://github.com/Sanzentyo/nvidia-video-codec-sdk", rev = "d2d0fec631365106d26adfe462f3ce15b043b879", version = "0.4.0", default-features = false, optional = true }

[dev-dependencies]
rstest = "0.26.1"
criterion = "0.8.2"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = { version = "0.10.1", optional = true }
core-media = { version = "0.7.1", optional = true }
core-video = { version = "0.5.2", optional = true }
metal = { version = "0.33.0", optional = true }
video-toolbox = { version = "0.2.1", optional = true }

[[bench]]
name = "decode_bench"
harness = false
