[package]
name = "vt-backend"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
backend-contract = { path = "../backend-contract" }
bitstream-core = { path = "../bitstream-core" }
core-foundation = "0.10.1"
core-media = "0.7.1"
core-video = "0.5.2"
video-toolbox = "0.2.1"
