[workspace]
resolver = "2"
members = [
  "crates/backend-contract",
  "crates/bitstream-core",
  "crates/vt-backend",
  "crates/nvidia-backend",
  "examples/smoke",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
thiserror = "2"
anyhow = "1"
